--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,35 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.serviceProviderCard {
+  display: flex;
+  border-bottom: 1px solid black;
+  padding: 10px;
+ }
+ 
+ .serviceProviderCard p {
+   padding: 0 10px 0 10px;
+   overflow: hidden;
+   margin: 0;
+ }
+ 
+ .serviceProviderCard p:nth-child(1) {
+   width: 200px;
+ }
+ 
+ .serviceProviderCard p:nth-child(2) {
+   width: 150px;
+ }
+ 
+ .serviceProviderCard p:nth-child(3) {
+   width: 150px;
+ }
+ 
+ .serviceProviderCard p:nth-child(4) {
+   width: 300px;
+ }
+ 
+ .serviceProviderCard p:nth-child(5) {
+   width: 120px;
+ }
